--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -41,6 +41,8 @@
     <%= f.text_field :address %>
   </div>
 
+  <%= f.hidden_field :roles, value: 'host' %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
