--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,8 @@
-<%= link_to new_host_path do %>
-  <button type="button" name="button">Become a Host</button>
+<% if current_user %>
+  <%= link_to 'Sign Out', destroy_user_session_path, method: 'delete' %>
+<% else %>
+  <%= link_to 'Sign In', new_user_session_path %>
 <% end %>
+
+
+<%= link_to 'Become a Host', new_user_path %>
