--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,10 +31,13 @@
 </p>
 
 <div id="reservations"></div>
-
+<div class="hide" id="user-id"><%= current_user.id %></div>
 
 <% if current_user == @user %>
   <%= link_to 'Edit', edit_user_path(@user) %> |
   <div id="open-modal"></div>
 <% end %>
 <%= link_to 'Back', root_path %>
+
+<%= javascript_include_tag 'components/Reservations.js'%>
+<%= javascript_include_tag 'components/OpenModal.js'%>
