--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,16 @@
 
   <body>
     <p id="notice"><%= notice %></p>
+    <% if current_user %>
+      <%= link_to 'Sign Out', destroy_user_session_path, method: 'delete' %>
+      <%= link_to 'My Profile', user_path(current_user.id) %>
+    <% else %>
+      <%= link_to 'Become a Host', new_user_registration_path(:role => 'host') %>
+      <%= link_to 'Sign Up', new_user_registration_path(:role => 'guest') %>
+      <%= link_to 'Sign In', new_user_session_path %>
+    <% end %>
+    <%= link_to 'Home', root_path %>
+
     <%= yield %>
   </body>
 </html>
