--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,15 @@
 <p id="notice"><%= notice %></p>
 
+Current User Id:
+<div id="user-id"><%= current_user.id %></div>
+<% if @user.guest? %>
+  <h3>WELCOME GUEST</h3>
+  Guest Id: <div id="guest-id"><%= @user.id %></div>
+<% else %>
+  <h3>WELCOME Host</h3>
+  Host Id: <div id="host-id"><%= @user.id %></div>
+<% end %>
+
 <p>
   <strong>First name:</strong>
   <%= @user.first_name %>
@@ -30,14 +40,9 @@
   <%= @user.address %>
 </p>
 
-<% if @user.guest? %>
-  I"M A GEUST
-  <div id="bookings"></div>
-<% else %>
-  <div id="reservation"></div>
-<% end %>
-<div id="user-id"><%= current_user.id %></div>
-<div id="host-id"><%= @user.id %></div>
+
+
+<div id="reservation"></div>
 
 
 <% if current_user == @user %>
@@ -46,4 +51,3 @@
 <%= link_to 'Back', root_path %>
 
 <%= javascript_include_tag 'components/Reservation.js'%>
-<%= javascript_include_tag 'components/Booking.js'%>
